# POSAPI

./: .gitignore  11  Pipfile  README AlterTable.md  README.md  apptest.ipynb  build_files.sh  database.py  main.py  pyproject.toml  requirements.txt  run_app.bat  run_venv.bat  vercel.json
dtos/: brands.py  categories.py  warehouses.py
entity/: brands.py  categories.py  vstockcards.py  warehouses.py
inventory_app/: config copy.ini  config.ini  database.py  loggings.py  main.py  testpython.ipynb
inventory_app/dtos/: Invoice.py  brands.py  customer.py  menu.py  models.py  stockCard.py  stockIn.py  stockMove.py  supply.py  type_doc.py  user.py  user_branch.py  vItemAll.py  v_stockDailys.py  vstockcards.py
inventory_app/entity/: Sys_GenCode.py  brands.py  categories.py  customer.py  group_user_menu.py  idrandom.py  invoiceDetail.py  invoiceHeader.py  menu.py  models.py  productM.py  productUnit.py  stockCard.py  stockInD.py  stockInH.py  sub_menu.py  systemCheck.py  tbStockMovD.py  tbStockMovH.py  tbSupply.py  tbstockcardbf.py  type_doc.py  user.py  userBranch.py  user_branch.py  vItemAll.py  v_datetime_current.py  v_stockDailys.py  vstockInD.py  vstockInH.py  vstockcards.py  warehouses.py
inventory_app/sqlQuery/: v_ProductAll.sql  v_StockDaily.sql
inventory_app/use_cases/: Sys_GenCode.py  brands.py  categories.py  current_datetime.py  customer.py  idrandom.py  invoice.py  menu.py  models.py  productM.py  productUnit.py  stockCard.py  stockIn.py  stockMove.py  stockcardBF.py  supply.py  systemCheck.py  type_doc.py  (+5 more)
sql_app/: database.py
use_cases/: brands.py
(+32 files in other folders)
