[tool.poetry]
name = "pos-api"
version = "0.0.1"
description = "API for POS Shop"
authors = ["winzato <wisardstat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.2.0"
numpy = "^1.26.4"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}

sqlalchemy = "^2.0.25"
pyodbc = "^5.1.0"
mssql = "^1.0.1"
sqlalchemy-orm = "^1.2.10"
pydantic = "1.10.10"
logging = "^0.4.9.6"
configparser = "^6.0.0"
quote = "^2.0.4"
bahttext = "^1.0.2"


[tool.poetry.group.dev.dependencies]

email-validator = "^2.1.0.post1"
pandas = "^2.2.0"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
